--- a/ProyectLauncher.Desktop/ProyectLauncher.Desktop.csproj
+++ b/ProyectLauncher.Desktop/ProyectLauncher.Desktop.csproj
@@ -7,7 +7,21 @@
     <Nullable>enable</Nullable>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <AssemblyName>Launcher</AssemblyName>
+    <RootNamespace>Launcher</RootNamespace>
+    <ApplicationIcon>avalonia-logo.ico</ApplicationIcon>
+    <Trimming>full</Trimming>
+    <PublishAot>True</PublishAot>
+    <SignAssembly>False</SignAssembly>
+    <Title>Launcher</Title>
+    <Company>Mix Dev</Company>
+    <Authors>Mixgyt</Authors>
+    <AssemblyVersion>0.0.1.3</AssemblyVersion>
+    <FileVersion>0.0.1.0</FileVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Include="avalonia-logo.ico" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
