--- a/ProyectLauncher.Desktop/ProyectLauncher.Desktop.csproj
+++ b/ProyectLauncher.Desktop/ProyectLauncher.Desktop.csproj
@@ -7,17 +7,18 @@
     <Nullable>enable</Nullable>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <AssemblyName>Launcher</AssemblyName>
-    <RootNamespace>Launcher</RootNamespace>
     <ApplicationIcon>avalonia-logo.ico</ApplicationIcon>
-    <Trimming>full</Trimming>
-    <PublishAot>True</PublishAot>
+    <Trimming></Trimming>
+    <PublishAot>False</PublishAot>
     <SignAssembly>False</SignAssembly>
-    <Title>Launcher</Title>
+    <Title></Title>
     <Company>Mix Dev</Company>
     <Authors>Mixgyt</Authors>
-    <AssemblyVersion>0.0.1.3</AssemblyVersion>
+    <AssemblyVersion>0.0.1.5</AssemblyVersion>
     <FileVersion>0.0.1.0</FileVersion>
+    <RootNamespace>Launcher</RootNamespace>
+    <StartupObject>ProyectLauncher.Desktop.Program</StartupObject>
+    <AssemblyName>Launcher</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="avalonia-logo.ico" />
