--- a/ProyectLauncher/ProyectLauncher.csproj
+++ b/ProyectLauncher/ProyectLauncher.csproj
@@ -8,6 +8,8 @@
     <IsWindows Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Windows)))' == 'true'">true</IsWindows>
     <IsOSX Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' == 'true'">true</IsOSX>
     <IsLinux Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' == 'true'">true</IsLinux>
+    <AssemblyName>ProyectLauncher</AssemblyName>
+    <RootNamespace>$(AssemblyName)</RootNamespace>
   
   </PropertyGroup>
   
