--- a/ProyectLauncher/ProyectLauncher.csproj
+++ b/ProyectLauncher/ProyectLauncher.csproj
@@ -41,4 +41,8 @@
     <PackageReference Include="CmlLib.Core" Version="3.3.9" />
     <PackageReference Include="MessageBox.Avalonia" Version="3.1.5.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controls\" />
+  </ItemGroup>
 </Project>
